Fix the negative spacing within the nav links

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -45,16 +45,17 @@
   margin-right: 2rem;
 }
 
-.nav-item {
-  height: 15px;
-}
+/* .nav-item {
+  height: 80px;
+} */
 
 .nav-links {
   color: #fff;
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding: 1.5rem 1rem;
+  padding: 0.5rem 1rem;
+  /* margin-top: 3rem; */
   height: 100%;
 }
 
